src/objects/P7S1_AccountIndex__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_AccountIndexcreatedUnit__c</fullName>
        <formula>CreatedBy.P7S1_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Index created Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountOwnerLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Index</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountSource__c</fullName>
        <label>Accountquelle</label>
        <picklist>
            <picklistValues>
                <fullName>71MDigital - OnlineOnly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdFactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Externe Empfehlung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kontaktformular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liferay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitarbeiterempfehlung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mundpropaganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProRex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenVentures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StarWatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telefon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treffen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soziales Netzwerk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaltakquise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redaktion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Performance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account-Index</relationshipLabel>
        <relationshipName>Account_Index</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Accountname__c</fullName>
        <externalId>true</externalId>
        <label>Accountname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Accountnumber__c</fullName>
        <label>Accountnummer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_BillingCity__c</fullName>
        <label>Rechnungsort</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_BillingCountry__c</fullName>
        <label>Rechnungsland</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_BillingPostalCode__c</fullName>
        <label>Rechnungs PLZ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_BillingStreet__c</fullName>
        <label>Rechnungsadresse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Description__c</fullName>
        <label>Beschreibung</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Email__c</fullName>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>P7S1_External_ID__c</fullName>
        <description>Id des zugehörigen Accounts</description>
        <externalId>true</externalId>
        <inlineHelpText>Id des zugehörigen Accounts</inlineHelpText>
        <label>External Account ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>P7S1_FirmeninhaberNachname__c</fullName>
        <label>Firmeninhaber Nachname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_FirmeninhaberVorname__c</fullName>
        <label>Firmeninhaber Vorname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Handelsregisternummer__c</fullName>
        <label>Handelsregisternummer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_KonzernAgenturverbundZugehoerigkeit__c</fullName>
        <label>Konzern/Agenturverbund-Zugehörigkeit</label>
        <picklist>
            <picklistValues>
                <fullName>konzernfrei/verbundfrei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Konzerntochter/Agenturtochter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Konzern/Agenturverbund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_OwnerUnitFormula__c</fullName>
        <formula>P7S1_AccountOwnerLookup__r.P7S1_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Account-Inhaber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ParentAccountLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Übergeordneter Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account-Index (Übergeordneter Account)</relationshipLabel>
        <relationshipName>Account_Index1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_ParentAccount__c</fullName>
        <label>Übergeordneter Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Phone__c</fullName>
        <label>Telefon</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>P7S1_Planumsatz__c</fullName>
        <label>Planumsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Rechtsform__c</fullName>
        <label>Rechtsform</label>
        <picklist>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG &amp; Co. KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG &amp; Co. KGaA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG &amp; Co. OHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anstalt des öffentlichen Rechts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApS &amp; Co. KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d.o.o.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. K.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Kffr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Kfm.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e.U.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>einfache Gesellschaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Einzelunternehmen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EURL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EWIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GbR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gemeinnützige Stiftung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genossenschaft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GesbR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GesmbH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GesnbR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GmbH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GmbH &amp; Co.KG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_RecordType__c</fullName>
        <formula>P7S1_Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ShippingCity__c</fullName>
        <label>Besucherort</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ShippingCountry__c</fullName>
        <label>Besucherland</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ShippingPostalCode__c</fullName>
        <label>Besucher PLZ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ShippingStreet__c</fullName>
        <label>Besucheradresse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Steuerkennzeichen__c</fullName>
        <label>Steuerkennzeichen</label>
        <picklist>
            <picklistValues>
                <fullName>A0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Steuernummer__c</fullName>
        <label>Steuernummer</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Type__c</fullName>
        <label>Accounttyp</label>
        <picklist>
            <picklistValues>
                <fullName>Agentur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst/Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bestandskunde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dienstleister allg.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitbewerber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>potentieller Neukunde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potenzialkunde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback / Rückgewinnungskunde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yield-Partner / Wiederverkäufer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licence Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTB/PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channling Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_UnitSharing__c</fullName>
        <description>Zeigt die Units mit Freigaben für den Account an</description>
        <formula>P7S1_Account__r.P7S1_UnitSharing__c</formula>
        <inlineHelpText>Zeigt die Units mit Freigaben für den Account an</inlineHelpText>
        <label>Unit Sharing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_UstIdNr__c</fullName>
        <label>Ust-ID-Nr</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SOM_DigitalSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Account-Index (Digital Sales)</relationshipLabel>
        <relationshipName>Account_Index1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_DooHSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DooH Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Index5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_Einkaufsagenturverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einkaufsagenturverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Account-Index (Einkaufsagenturverkäufer)</relationshipLabel>
        <relationshipName>Account_Index2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_Planungsagenturverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planungsagenturverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Account-Index (Planungsagenturverkäufer)</relationshipLabel>
        <relationshipName>Account_Index3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOM_TVKundenverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TV Kundenverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Account-Index (TV Kundenverkäufer)</relationshipLabel>
        <relationshipName>Account_Index4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Accounttypen__c</fullName>
        <label>Kundenart TV</label>
        <picklist>
            <picklistValues>
                <fullName>Agentur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agenturverbund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bestandskunde 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kein Werbetreibender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nicht relevant 71M Sales D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-71M_Bestand 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-71M_Neugeschäft 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-TV_Bestand 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-TV_Neugeschäft 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Konzern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Top1Wirtschaftsbereich__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top1 Wirtschaftsbereich</label>
        <referenceTo>Som_Top1Wirtschaftsbereich__c</referenceTo>
        <relationshipLabel>Account-Index</relationshipLabel>
        <relationshipName>Account_Index</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Top1Wirtschaftsgruppe__c</fullName>
        <label>Top1 Wirtschaftsgruppe</label>
        <picklist>
            <picklistValues>
                <fullName>AKUSTIK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALKOHOLFREIE GETRAENKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANLAGEN-LEASING + -VERMIETUNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTRIEBE + LAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARZNEIMITTEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDIO-GERAETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSBILDUNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAD + SANITAER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAU-STOFFE + BAU-ZUBEHOER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAU-WIRTSCHAFT FIRMEN-/ IMAGE-WBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEKLEIDUNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERATUNGSDIENSTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BILD- + TONTRAEGER MUSIK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROT + DAUERBACKWAREN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROTAUFSTRICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARITATIVE ORGANISATIONEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPUTER + BUERO FIRMEN-/ IMAGE-WBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPUTER + -ZUSATZGERAETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVENIENCE FOOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEKORATIVE KOSMETIK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEODORANTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DESSERTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIAETEN + SPORTLERNAHRUNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIENSTLEISTUNGEN FIRMEN-/ IMAGE-WBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIENSTLEISTUNGEN SONSTIGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-COMMERCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDV-DIENSTLEISTUNGEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EINRICHTUNGEN GESUNDHEIT + PFLEGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EINRICHTUNG GEWERBE + INDUSTRIE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account-Index</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account-Index-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account-Index</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>